gccida/g0/gen_decl_die
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_decl_die/src/dwarf2out.c:11876:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_decl_die/src/dwarf2out.c:11877:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *origin; // [rsp+18h] [rbp-8h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_decl_die/src/dwarf2out.c:11878:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *origina; // [rsp+18h] [rbp-8h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_decl_die/src/dwarf2out.c:11905:26: error: use of undeclared identifier 'debug_info_level_0'
else if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_decl_die/src/dwarf2out.c:11923:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_decl_die/src/dwarf2out.c:11927:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_decl_die/src/dwarf2out.c:11949:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_decl_die/src/obj/dwarf2out.o] Error 1
